[project]
name = "lmsys-kaggle-t04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "peft>=0.18.0",
    "scikit-learn>=1.7.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
